chore: add copy/paste detector

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src tests --fix",
     "apidoc": "apidoc -i src/controllers/ -o doc/",
-    "release": "standard-version"
+    "release": "standard-version",
+    "inspect:cp": "jscpd src/"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
+    "jscpd": "^3.1.0",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
     "standard-version": "^7.1.0"
