--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "new-layout",
   "version": "0.2.6",
   "description": "",
-  "main": "index.js",
+  "main": "src/srver/http.js",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "start": "node src/server/http.js",
+    "start": "NODE_ENV=production node src/server/http.js",
+    "dev": "nodemon src/server/http.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src tests --fix",
     "apidoc": "apidoc -i src/controllers/ -o doc/",
@@ -48,8 +49,6 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-      "npm run lint"
-    ]
+    "*.js": ["npm run lint"]
   }
 }
