--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "apidoc": "^0.20.0",
+    "chance": "^1.1.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.0",
