--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@hapi/joi": "^17.1.1",
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
+    "http-status-codes": "^1.4.0",
     "pino": "^5.17.0",
     "rc": "^1.2.8"
   },
