feat: global update

--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
-  "name": "new-layout",
-  "version": "0.3.0",
-  "description": "",
-  "main": "src/srver/http.js",
+  "name": "res-api-template",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Rest project start template",
+  "main": "src/main.js",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "start": "NODE_ENV=production node src/server/http.js",
-    "dev": "nodemon src/server/http.js",
+    "start": "NODE_ENV=production node src/main.js",
+    "dev": "nodemon src/main.js",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest unit/* -i --no-cache",
     "test:integration": "jest integration/* -i --no-cache",
     "test:unit:watch": "jest unit/* -i --no-cache --watch",
     "test:integration:watch": "jest integration/* -i --no-cache --watch",
+    "pem": "cert/generate.sh",
     "lint": "eslint src tests --fix",
     "apidoc": "apidoc -i src/controllers/ -o doc/",
     "release": "standard-version",
     "inspect:cp": "jscpd src/",
     "inspect:deps": "npm audit && snyk test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "express": "^4.17.1",
-    "express-pino-logger": "^4.0.0",
-    "http-status-codes": "^1.4.0",
-    "pino": "^5.17.0",
-    "rc": "^1.2.8"
+  "engines": {
+    "node": ">=12.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "apidoc": "^0.20.0",
-    "chance": "^1.1.4",
-    "eslint": "^6.8.0",
+    "apidoc": "^0.22.1",
+    "chance": "^1.1.5",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-security": "^1.4.0",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "jscpd": "^3.1.0",
-    "lint-staged": "^10.0.8",
-    "nodemon": "^2.0.2",
-    "pino-pretty": "^3.6.1",
-    "prettier": "^1.19.1",
-    "snyk": "^1.299.0",
-    "standard-version": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jscpd": "^3.3.0-rc.6",
+    "lint-staged": "^10.2.4",
+    "nodemon": "^2.0.4",
+    "pino-pretty": "^4.0.0",
+    "prettier": "^2.0.5",
+    "snyk": "^1.321.0",
+    "standard-version": "^8.0.0",
     "superagent": "^5.2.2"
+  },
+  "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "co-body": "^6.0.0",
+    "express": "^4.17.1",
+    "nanoid": "^3.1.3",
+    "pg": "^7.18.2",
+    "pino": "^6.2.1",
+    "rc": "^1.2.8"
   },
   "husky": {
     "hooks": {
