--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,26 @@
 {
-  "extends": ["airbnb-base", "plugin:security/recommended", "prettier"],
-  "plugins": ["prettier", "security"],
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["prettier"],
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "script"
+  },
   "rules": {
     "prettier/prettier": "error",
-    "no-plusplus": [
-      "error",
-      {
-        "allowForLoopAfterthoughts": true
-      }
-    ],
+    "no-plusplus": "off",
     "no-use-before-define": [
       "error",
       {
         "functions": false
       }
     ],
-    "import/no-unresolved": [0]
+    "import/no-unresolved": [0],
+    "strict": ["error", "global"]
   },
   "env": {
+    "es2020": true,
     "node": true,
-    "jest": true
+    "jest": true,
+    "browser": true
   }
 }
