--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
   "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"],
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2020,
+    "ecmaVersion": 2021,
     "sourceType": "script"
   },
   "rules": {
@@ -15,10 +16,28 @@
       }
     ],
     "import/no-unresolved": [0],
-    "strict": ["error", "global"]
+    "strict": ["error", "global"],
+    "no-underscore-dangle": ["error", { "allow": ["_id", "__v"] }],
+    "eqeqeq": ["warn"],
+    "camelcase": [
+      "error",
+      {
+        "ignoreDestructuring": true,
+        "properties": "never"
+      }
+    ],
+    "lines-between-class-members": [
+      "error",
+      "always",
+      { "exceptAfterSingleLine": true }
+    ],
+    "no-console": "error",
+    "max-classes-per-file": "off",
+    "class-methods-use-this": "off",
+    "no-multi-str": "off"
   },
   "env": {
-    "es2020": true,
+    "es2021": true,
     "node": true,
     "jest": true,
     "browser": true
